# DouC

./: CMakeLists.txt  Dockerfile  README.md  WINDOWS_NETWORK_SETUP.md  cli.py  deploy.sh  docker-compose.yml  main.py  requirements.txt  setup.py  start.bat  start.sh  users.json
include/: dou_blockchain.h  message.h  reward_system.h  spam_prevention.h  validator.h
src/: __init__.py  main.cpp  message.cpp  reward_system.cpp
src/blockchain/: __init__.py  core.py
src/messaging/: __init__.py  system.py
src/network/: relay.py  validator.py
src/rewards/: __init__.py  system.py
tests/: test_blockchain.py
